Backend:
-Utilizando java versao 21 no projeto
-Remocao do atributo photo nas entidades doctor, donor e bloodcenter, e suas respectivas classes que a utilizavam
-Criacao das constantes contendo as mensagens de erro
-Refatoracao de algumas funcionalidades do codigo para melhor legibilidade

Frontend:

-Alteracao para lidar com a remocao do atributo photo
-Remocao da utilizacao de formData na aplicacao